--- a/index.html
+++ b/index.html
@@ -220,61 +220,61 @@
       <h2 style="text-align:center; color: #ffffff;"">Projects</h2>
     </div>
     <div class="card-columns ">
-        <div class="card bg-light border border-light rounded ml-1">
+        <div class="card bg-light border border-dark rounded ml-1">
           <img  style="width:460px;"  src="img/Projects/thumbnails/AcademyCinemas.png" class="project-photo" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Academy Cinemas</h5>
             <p class="card-text">The Academy Cinemas project resulted by purely utilizing the CSS framework, Bootstrap.</p>
-            <a href="#" class="btn btn-link">Source Code</a>
+            <a href="#" class="btn btn-link" target="_blank">Source Code</a>
           </div>
         </div>
-        <div class="card bg-light">
+        <div class="card bg-light border border-dark">
             <img src="img/Projects/thumbnails/"  class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Pizza-Menu System</h5>
               <p class="card-text"></p>
-              <a href="#" class="btn btn-danger">Source Code</a>
+              <a href="#" class="btn btn-danger" target="_blank">Source Code</a>
             </div>
           </div>
-        <div class="card bg-light">
+        <div class="card bg-light border border-dark">
           <img src="img/Projects/thumbnails/Space Station.png"  class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">The Space Station</h5>
             <p class="card-text">The Space Station is one of my first projects. It's a product of two of the most fundamental languages of Web Development (HTML & CSS).</p>
-            <a href="https://github.com/rshafi2/The-Tech-Academy-Basic-HTML-CSS-Projects/tree/master/The%20Space%20Station%20Project" class="btn btn-danger">Source Code</a>
+            <a href="https://github.com/rshafi2/The-Tech-Academy-Basic-HTML-CSS-Projects/tree/master/The%20Space%20Station%20Project" class="btn btn-danger" target="_blank">Source Code</a>
           </div>
         </div>
-        <div class="card bg-light">
+        <div class="card bg-light border border-dark">
             <img  style="width:400px;"  src="" class="project-photo" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title"></h5>
               <p class="card-text"></p>
-              <a href="" class="btn btn-danger">Source Code</a>
+              <a href="" class="btn btn-danger" target="_blank">Source Code</a>
             </div>
           </div>
-        <div class="card text-center bg-light">
+        <div class="card text-center bg-light border border-dark">
           <div class="card-body">
             <h5 class="card-title"></h5>
             <p class="card-text"></p>
             <p class="card-text"><small class="text-muted"></small></p>
-            <a href="" class="btn btn-danger">Source Code</a>
+            <a href="" class="btn btn-danger" target="_blank">Source Code</a>
           </div>
         </div>
         
-        <div class="card bg-light">
+        <div class="card bg-light border border-dark">
             <img  style="width:460px;"  src="" class="project-photo" class="card-img-top" alt="...">
-            <div class="card-body">
+            <div class="card-body mr-1">
               <h5 class="card-title"></h5>
               <p class="card-text"></p>
-              <a href="" class="btn btn-danger">Source Code</a>
+              <a href="" class="btn btn-danger" target="_blank">Source Code</a>
             </div>
           </div>
-        <div class="card bg-light">
-          <div class="card-body">
+        <div class="card bg-light border border-dark">
+          <div class="card-body mr-1">
             <h5 class="card-title"></h5>
             <p class="card-text"> </p>
             <p class="card-text"><small class="text-muted"></small></p>
-            <a href="" class="btn btn-danger">Source Code</a>
+            <a href="" class="btn btn-danger" target="_blank">Source Code</a>
           </div>
         </div>
       </div>
