--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
       <h2 style="text-align:center; color: #ffffff;"">Projects</h2>
     </div>
     <div class="card-columns ">
-        <div class="card bg-light border border-dark rounded ml-1">
+        <div class="card bg-light border border-light rounded ml-1">
           <img  style="width:460px;"  src="img/Projects/thumbnails/AcademyCinemas.png" class="project-photo" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Academy Cinemas</h5>
@@ -228,7 +228,7 @@
             <a href="#" class="btn btn-dark" target="_blank">Source Code</a>
           </div>
         </div>
-        <div class="card bg-light border border-dark">
+        <div class="card bg-light border border-light">
             <img src="img/Projects/thumbnails/"  class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Pizza-Menu System</h5>
@@ -236,7 +236,7 @@
               <a href="#" class="btn btn-dark" target="_blank">Source Code</a>
             </div>
           </div>
-        <div class="card bg-light border border-dark">
+        <div class="card bg-light border border-light">
           <img src="img/Projects/thumbnails/Space Station.png"  class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">The Space Station</h5>
@@ -244,7 +244,7 @@
             <a href="https://github.com/rshafi2/The-Tech-Academy-Basic-HTML-CSS-Projects/tree/master/The%20Space%20Station%20Project" class="btn btn-dark" target="_blank">Source Code</a>
           </div>
         </div>
-        <div class="card bg-light border border-dark">
+        <div class="card bg-light border border-light">
             <img  style="width:400px;"  src="" class="project-photo" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title"></h5>
@@ -252,7 +252,7 @@
               <a href="" class="btn btn-dark" target="_blank">Source Code</a>
             </div>
           </div>
-        <div class="card text-center bg-light border border-dark">
+        <div class="card text-center bg-light border border-light">
           <div class="card-body">
             <h5 class="card-title"></h5>
             <p class="card-text"></p>
@@ -261,7 +261,7 @@
           </div>
         </div>
         
-        <div class="card bg-light border border-dark">
+        <div class="card bg-light border border-light mr-1">
             <img  style="width:460px;"  src="" class="project-photo" class="card-img-top" alt="...">
             <div class="card-body mr-2">
               <h5 class="card-title"></h5>
@@ -269,8 +269,8 @@
               <a href="" class="btn btn-dark" target="_blank">Source Code</a>
             </div>
           </div>
-        <div class="card bg-light border border-dark">
-          <div class="card-body mr-2">
+        <div class="card bg-light border border-light mr-1">
+          <div class="card-body">
             <h5 class="card-title"></h5>
             <p class="card-text"> </p>
             <p class="card-text"><small class="text-muted"></small></p>
