--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
     <div>
       <h2 style="text-align:center; color: #ffffff;"">Projects</h2>
     </div>
-    <div class="card-columns ">
+    <div class="card-columns mr-2">
         <div class="card bg-light border border-light rounded ml-1">
           <img  style="width:460px;"  src="img/Projects/thumbnails/AcademyCinemas.png" class="project-photo" class="card-img-top" alt="...">
           <div class="card-body">
@@ -261,7 +261,7 @@
           </div>
         </div>
         
-        <div class="card bg-light border border-light mr-1">
+        <div class="card bg-light border border-light">
             <img  style="width:460px;"  src="" class="project-photo" class="card-img-top" alt="...">
             <div class="card-body mr-2">
               <h5 class="card-title"></h5>
@@ -269,7 +269,7 @@
               <a href="" class="btn btn-dark" target="_blank">Source Code</a>
             </div>
           </div>
-        <div class="card bg-light border border-light mr-1">
+        <div class="card bg-light border border-light">
           <div class="card-body">
             <h5 class="card-title"></h5>
             <p class="card-text"> </p>
