--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 </div>
 </div>
 
-  <div class="container-fluid mt-0 mb-0" id="skills"style="background-color:#C39BD3;">
+  <div class="container-fluid mt-2 mb-0" id="skills"style="background-color:#C39BD3;">
       <div class="row justify-content-center">
         
           <div class="row justify-content-center">
@@ -219,7 +219,7 @@
     <div>
       <h2 style="text-align:center; color: #ffffff;"">Projects</h2>
     </div>
-    <div class="card-columns m-2">
+    <div class="card-columns ml-2 mr-2">
         <div class="card bg-light border border-light rounded ml-1">
           <img  style="width:460px;"  src="img/Projects/thumbnails/AcademyCinemas.png" class="project-photo" class="card-img-top" alt="...">
           <div class="card-body">
