--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
             <div class="card-body">
               <h5 class="card-title">Pizza-Menu System</h5>
               <p class="card-text"></p>
-              <a href="#" class="btn btn-dark" target="_blank">Source Code</a>
+              <a href="https://github.com/rshafi2/The-Tech-Academy-Basic-JavaScript-Projects/tree/master/Pizza" class="btn btn-dark" target="_blank">Source Code</a>
             </div>
           </div>
         <div class="card bg-light border border-light">
