--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
   </section>
 
   <!-- Footer -->
-  <footer class="bg-light py-5">
+  <footer class="py-5" style="background-color:#C0392B;">
   <div class="container">
       <div class="text-center">
         <a type="button" href="https://github.com/rshafi2" class="btn-floating btn-lg btn-git bg-light" target="_blank"><i class="fa fa-github"></i></a>
