--- a/index.html
+++ b/index.html
@@ -358,14 +358,14 @@
   </section>
 
   <!-- Footer -->
-  <footer class="py-5" style="background-color:#C0392B;">
+  <footer class="bg-light py-5" >
   <div class="container">
       <div class="text-center">
         <a type="button" href="https://github.com/rshafi2" class="btn-floating btn-lg btn-git bg-light" target="_blank"><i class="fa fa-github"></i></a>
         <a type="button" href="https://www.linkedin.com/in/mohammad-shafi/" class="btn-floating btn-lg btn-linkedin bg-light" target="_blank"><i class="fa fa-linkedin"></i></a>
       </div>
       <br/>
-      <div class="small text-center text-light "> Handcrafted with <img src="img/love.png" alt="Love Symbol"> &copy; twentynineteen</div>
+      <div class="small text-center text-dark "> Handcrafted with <img src="img/love.png" alt="Love Symbol"> &copy; twentynineteen</div>
     </div>
   </footer>
   <script src="js/creative.min.js"></script>
