--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <div class="container h-95 my-5 py-5">
       <div class="row h-100 align-items-center justify-content-center text-center">
         <div class="col-lg-10 align-self-end pt-5">
-          <h1 class="display-1 text-white font-weight-normal">Hello, I'm <span class="font-italic font-weight-bold" style="color:#d6370c">Mohammad Shafi.</span> <br/> I am a Python Developer.</h1>
+          <h1 class="display-1 text-white font-weight-normal">Hello, I'm <span class="font-italic font-weight-bold" style="color:#d6370c">Mohammad Shafi.</span> <br/> I am a Software Developer.</h1>
         
          <a href="#about"class="btn btn-secondary btn-lg bg-secondary js-scroll-trigger my-2">View my work!</a>
         </div>
