--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
           </div>
         </div>
         <div class="card bg-light border border-light">
-            <img src="img/Projects/thumbnails/"  class="card-img-top" alt="...">
+            <img src="resizedimage.jpg"  class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Pizza-Menu System</h5>
               <p class="card-text"></p>
@@ -237,7 +237,7 @@
             </div>
           </div>
         <div class="card bg-light border border-light">
-          <img src="img/Projects/thumbnails/Space Station.png"  class="card-img-top" alt="...">
+          <img src="Space Station.png"  class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">The Space Station</h5>
             <p class="card-text">The Space Station is one of my first projects. It's a product of two of the most fundamental languages of Web Development (HTML & CSS).</p>
