--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
             </div>
           </div>
         <div class="card bg-light border border-light">
-          <img src="Space Station.png"  class="card-img-top" alt="...">
+          <img src="resizedspace.png"  class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">The Space Station</h5>
             <p class="card-text">The Space Station is one of my first projects. It's a product of two of the most fundamental languages of Web Development (HTML & CSS).</p>
