--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
           </div>
         </div>
         <div class="card bg-light border border-light">
-            <img  style="width:400px;"  src="library.jpeg" class="project-photo" class="card-img-top" alt="...">
+            <img  style="width:400px;"  src="library1.jpeg" class="project-photo" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title"></h5>
               <p class="card-text"></p>
