--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
     </div>
     <div class="card-columns ml-2 mr-2">
         <div class="card bg-light border border-light rounded ml-1">
-          <img  style="width:460px;"  src="img/Projects/thumbnails/AcademyCinemas.png" class="project-photo" class="card-img-top" alt="...">
+          <img    src="img/Projects/thumbnails/AcademyCinemas.png" class="project-photo" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Academy Cinemas</h5>
             <p class="card-text">The Academy Cinemas project resulted by purely utilizing the CSS framework, Bootstrap.</p>
