--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
             <img src="resizedimage.jpg"  class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Pizza-Menu System</h5>
-              <p class="card-text"></p>
+              <p class="card-text">The Pizza-Menu System was a product of pure JavaScript. </p>
               <a href="https://github.com/rshafi2/The-Tech-Academy-Basic-JavaScript-Projects/tree/master/Pizza" class="btn btn-dark" target="_blank">Source Code</a>
             </div>
           </div>
@@ -248,9 +248,9 @@
         <div class="card bg-light border border-light">
             <img   src="4.jpg" class="project-photo" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title"></h5>
-              <p class="card-text"></p>
-              <a href="" class="btn btn-dark" target="_blank">Source Code</a>
+              <h5 class="card-title">The Library Database</h5>
+              <p class="card-text">The technology used in this project were Microsoft SQL Server and SQL Server Management Studio.</p>
+              <a href="https://github.com/rshafi2/The-Tech-Academy-SQL-Coding-Projects/blob/master/LibraryDatabase(Final%20Version).sql" class="btn btn-dark" target="_blank">Source Code</a>
             </div>
           </div>
         <div class="card text-center bg-light border border-light">
