--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                 
                   <div class="card-body mb-1">
                       <h5 class="card-title text-center">Web Development</h5>
-                     <img class="card-img-top mt-1 mb-1 img-responsive rounded-circle" src="./img/html_css_logo.jpg" alt="HTML/CSS Logo" style="width: 11.5rem ; height:8.5rem ;">
+                     <img class="card-img-top mt-1 mb-1 img-responsive rounded-circle" src="html_css.jpg" alt="HTML/CSS Logo" style="width: 11.5rem ; height:8.5rem ;">
                       <br/>
                       <br/>
                    <p class="card-text"></p>
@@ -178,7 +178,7 @@
               <div class="card" style="width: 15rem; height: 20rem;">
                   <div class="card-body mb-1">
                       <h5 class="card-title text-center">JavaScript</h5>
-                      <img class="card-img-top mt-1 mb-1 img-responsive rounded-circle" src="./img/javaScript_logo.jpg" alt="..." style="width: 12.5rem ; height:7.5rem ;">
+                      <img class="card-img-top mt-1 mb-1 img-responsive rounded-circle" src="javascript_logo.jpg" alt="..." style="width: 12.5rem ; height:7.5rem ;">
                       <br/>
                       <br/>
                       <p class="card-text"></p>
