--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                 
                   <div class="card-body mb-1">
                       <h5 class="card-title text-center">Web Development</h5>
-                     <img class="card-img-top mt-1 mb-1 img-responsive rounded-circle" src="html_css.jpg" alt="HTML/CSS Logo" style="width: 11.5rem ; height:8.5rem ;">
+                     <img class="card-img-top mt-1 mb-1 img-responsive rounded-circle" src="html_css_logo.jpg" alt="HTML/CSS Logo" style="width: 11.5rem ; height:8.5rem ;">
                       <br/>
                       <br/>
                    <p class="card-text"></p>
@@ -217,7 +217,7 @@
 
  <!---Portfolio Section -->
   <section id="portfolio"style="background-color:#5499C7;">
-    <div>
+    <div class="mt-1">
       <h2 style="text-align:center; color: #ffffff;"">Projects</h2>
     </div>
     <div class="card-columns ml-2 mr-2">
@@ -253,7 +253,7 @@
               <a href="https://github.com/rshafi2/The-Tech-Academy-SQL-Coding-Projects/blob/master/LibraryDatabase(Final%20Version).sql" class="btn btn-dark" target="_blank">Source Code</a>
             </div>
           </div>
-        <div class="card text-center bg-light border border-light">
+        <!--<div class="card text-center bg-light border border-light">
           <div class="card-body">
             <h5 class="card-title"></h5>
             <p class="card-text"></p>
@@ -277,7 +277,7 @@
             <p class="card-text"><small class="text-muted"></small></p>
             <a href="" class="btn btn-dark" target="_blank">Source Code</a>
           </div>
-        </div>
+        </div>-->
       </div>
    
 
