--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
     </div>
     <div class="card-columns ml-2 mr-2">
         <div class="card bg-light border border-light rounded ml-1">
-          <img    src="Academy.png" class="project-photo" class="card-img-top" alt="...">
+          <img    src="Academy.png" class="project-photo" class="card-img-top mx-auto d-block" alt="Academy Cinemas Project Image">
           <div class="card-body">
             <h5 class="card-title">Academy Cinemas</h5>
             <p class="card-text">The Academy Cinemas project resulted by purely utilizing the CSS framework, Bootstrap.</p>
