--- a/index.html
+++ b/index.html
@@ -217,8 +217,10 @@
 
  <!---Portfolio Section -->
   <section id="portfolio"style="background-color:#5499C7;">
-    <div class="mt-1">
-      <h2 style="text-align:center; color: #ffffff;"">Projects</h2>
+    <div>
+      <div class="mt-1">
+          <h2 style="text-align:center; color: #ffffff;"">Projects</h2>
+      </div>
     </div>
     <div class="card-columns ml-2 mr-2">
         <div class="card bg-light border border-light rounded ml-1">
