--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
           <h2 style="text-align:center; color: #ffffff;"">Projects</h2>
       </div>
     </div>
-    <div class="card-columns ml-2 mr-2">
+    <div class="card-columns pt-2 ml-2 mr-2">
         <div class="card bg-light border border-light rounded ml-1">
           <img    src="Academy.png" class="project-photo" class="card-img-top mx-auto d-block" alt="Academy Cinemas Project Image">
           <div class="card-body">
