--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                   </div>
               </div>
           </div>
-          <div class="col-auto mb-3">
+          <!--<div class="col-auto mb-3">
               <div class="card" style="width: 15rem; height: 20rem;">
                   <div class="card-body">
                       <h5 class="card-title text-center"></h5>
@@ -209,7 +209,7 @@
                      
                   </div>
               </div>
-          </div>
+          </div>-->
       </div>
   </div>
 
