--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
           </div>
         </div>
         
-        <div class="card bg-light border border-light">
+        <!---<div class="card bg-light border border-light">
             <img  style="width:460px;"  src="" class="project-photo" class="card-img-top" alt="...">
             <div class="card-body mr-2">
               <h5 class="card-title"></h5>
