--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
             <h5 class="card-title"></h5>
             <p class="card-text">Tkinter GUI Projects</p>
             <p class="card-text">The projects here were all based on the standard GUI (Graphical User Interface) Framework for Python known as Tkinter.  
-              Out of all the GUI Frameworks, tkinter is most commonly used method. It is a standard Python interface to the Tk GUI toolkit shipped with Python. 
+              It is a standard Python interface to the Tk GUI toolkit shipped with Python. 
              <small class="text-muted"></small></p>
             <a href="https://github.com/rshafi2/The-Tech-Academy-Basic-Python-Projects" class="btn btn-dark" target="_blank">Source Code</a>
           </div>
