tkinter logo added

--- a/index.html
+++ b/index.html
@@ -201,12 +201,24 @@
           <div class="col-auto mb-3">
               <div class="card" style="width: 15rem; height: 20rem;">
                   <div class="card-body">
-                      <h5 class="card-title text-center"></h5>
+                      <h5 class="card-title text-center">Django Framework</h5>
                       <img class="card-img-top mt-1 mb-1 img-responsive rounded-circle" src="django.jpg" alt="Django Logo" style="width: 12.5rem ; height:7.5rem ;">
                       <br/>
                       <br/>
                       <p class="card-text"></p>
                      
+                  </div>
+              </div>
+          </div>
+          <div class="col-auto mb-3">
+              <div class="card" style="width: 15rem; height: 20rem;">
+                  <div class="card-body">
+                      <h5 class="card-title text-center">Tkinter</h5>
+                      <img class="card-img-top mt-1 mb-1 img-responsive rounded-circle" src="tkinter_skills.jpg" alt="Tkinter_logo" style="width: 12.5rem ; height:7.5rem ;">
+                      <br/>
+                      <br/>
+                      <p class="card-text"></p>
+                    
                   </div>
               </div>
           </div>
