--- a/index.html
+++ b/index.html
@@ -260,12 +260,14 @@
           </div>
         </div>
         
-        <!---<div class="card bg-light border border-light">
-            <img  style="width:460px;"  src="" class="project-photo" class="card-img-top" alt="...">
+        <div class="card text-center bg-light border border-light">
+            <img  style="width:460px;"  src="TravelApp.png" class="project-photo" class="card-img-top" alt="...">
             <div class="card-body mr-2">
               <h5 class="card-title"></h5>
-              <p class="card-text"></p>
-              <a href="" class="btn btn-dark" target="_blank">Source Code</a>
+              <p class="card-text">Travel Application</p>
+              <p class="card-text">I worked with my peers in a team developing a MVT Web Application. We were given the task of creating software designed to help hobbyists keep track of their collections of items, as well as interact with APIs and use Data Scraping to get up to date information on things related to those collections and hobbies. This project was built using Python, Django, SQLite, and HTML/CSS. 
+             <small class="text-muted"></small></p>
+              <a href="https://github.com/rshafi2/JobPlacementDashboard" class="btn btn-dark" target="_blank">Source Code</a>
             </div>
           </div>
         <div class="card bg-light border border-light">
