--- a/index.html
+++ b/index.html
@@ -270,15 +270,15 @@
               <a href="https://github.com/rshafi2/JobPlacementDashboard" class="btn btn-dark" target="_blank">Source Code</a>
             </div>
           </div>
-        <div class="card bg-light border border-light">
+       <!-- <div class="card bg-light border border-light">
           <div class="card-body">
             <h5 class="card-title"></h5>
             <p class="card-text"> </p>
             <p class="card-text"><small class="text-muted"></small></p>
             <a href="" class="btn btn-dark" target="_blank">Source Code</a>
           </div>
-        </div>-->
-      </div>
+        </div>
+      </div>-->
    
 
   <!-- Call to Action Section -->
