--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 
   <!-- Theme CSS - Includes Bootstrap -->
   <link href="css/creative.min.css" rel="stylesheet">
+   <link href="css/creative.css" rel="stylesheet">
 
 </head>
 
