--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 </div>
       
  <br />
-    <div class="container"style="background-color:#F1948A;">
+    <div class="container"style="background-color:#ADACB5;">
      
             <h5 style="color:#d6370c" >Who Am I</h5>
             <p  class="text-justify text-light"> Hi. I am Shafi, a software developer from Queens, NY. 
