--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <body id="page-top">
 
   <!-- Navigation -->
-  <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
+  <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav"style="background-color:#2D3142;">
     <div class="container">
       <a style="color:#d6370c" class="navbar-brand js-scroll-trigger" href="#page-top">Mohammad Shafi</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -64,7 +64,7 @@
   </nav>
 
   <!-- Masthead -->
-  <header class="masthead">
+  <header class="masthead" style="background-color:B0D7FF;">
     <div class="container h-95 my-5 py-5">
       <div class="row h-100 align-items-center justify-content-center text-center">
         <div class="col-lg-10 align-self-end pt-5">
