--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
   </nav>
 
   <!-- Masthead -->
-  <header class="masthead" style="background-color:B0D7FF;">
+  <header class="masthead" style="background-color:#B0D7FF;">
     <div class="container h-95 my-5 py-5">
       <div class="row h-100 align-items-center justify-content-center text-center">
         <div class="col-lg-10 align-self-end pt-5">
