--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
   <!-- About Section -->
 
 
-<div class="page-section" id="about" style="background-color:#F1948A;">
+<div class="page-section" id="about" style="background-color:#ADACB5;">
 <div class="col">
 <div  class="container">
             <div class="col">
