--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
  <br />
     <div class="container"style="background-color:#ADACB5;">
      
-            <h5 style="color:#2D3142;" >Who Am I</h5>
+            <h5 style="color:#d6370c;" >Who Am I</h5>
             <p  class="text-justify" style="color:#212D40"> Hi. I am Shafi, a software developer from Queens, NY. 
               I am passionate about different areas of Web Development from back-end technologies (PHP, Django/Python) to front-end technologies (HTML, CSS, and jQuery/Javascript). 
               I am excited about building excellent software that improves the lives of those around me. I've always been curious about technology and would always say to myself wow this stuff is really cool.</p> 
