--- a/index.html
+++ b/index.html
@@ -109,12 +109,12 @@
 </div>
 </div>
 
-  <div class="container-fluid pt-3 mb-0" id="skills"style="background-color:#D8D5DB;">
+  <div class="container-fluid pt-3 mb-0" id="skills"style="background-color:B0D7FF;">
       <div class="row justify-content-center">
         
           <div class="row justify-content-center">
               <div class="col-lg-8 text-center">
-                <h2 class="text-light">Development Skills</h2>
+                <h2 style="color:#d6370c;">Development Skills</h2>
                 
               </div>
             </div>
