--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 </div>
 </div>
 
-  <div class="container-fluid pt-3 mb-0" id="skills"style="background-color:B0D7FF;">
+  <div class="container-fluid pt-3 mb-0" id="skills"style="background-color:#B0D7FF;">
       <div class="row justify-content-center">
         
           <div class="row justify-content-center">
