--- a/index.html
+++ b/index.html
@@ -213,10 +213,10 @@
   
 
  <!---Portfolio Section -->
-  <section id="portfolio"style="background-color:#5499C7;">
+  <section id="portfolio"style="background-color:#EAE8FF;">
     <div>
       <div class="pt-4">
-          <h2 style="text-align:center; color: #ffffff;"">Projects</h2>
+          <h2 style="text-align:center;"" style="color:#d6370c;">Projects</h2>
       </div>
     </div>
     <div class="card-columns pt-2 ml-2 mr-2">
