--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 </div>
 </div>
 
-  <div class="container-fluid pt-3 mb-0" id="skills"style="background-color:#B0D7FF;">
+  <div class="container-fluid pt-3 mb-0" id="skills"style="background-color:#EAE8FF;">
       <div class="row justify-content-center">
         
           <div class="row justify-content-center">
@@ -213,7 +213,7 @@
   
 
  <!---Portfolio Section -->
-  <section id="portfolio"style="background-color:#EAE8FF;">
+  <section id="portfolio"style="background-color:#B0D7FF;">
     <div>
       <div class="pt-4">
           <h2 style="text-align:center;"" style="color:#d6370c;">Projects</h2>
