--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         
           <div class="row justify-content-center">
               <div class="col-lg-8 text-center">
-                <h2 style="color:#d6370c;">Development Skills</h2>
+                <h2 style="color:#2D3142;">Development Skills</h2>
                 
               </div>
             </div>
@@ -216,7 +216,7 @@
   <section id="portfolio"style="background-color:#B0D7FF;">
     <div>
       <div class="pt-4">
-          <h2 style="text-align:center;"" style="color:#d6370c;">Projects</h2>
+          <h2 style="text-align:center;"" style="color:#2D3142;">Projects</h2>
       </div>
     </div>
     <div class="card-columns pt-2 ml-2 mr-2">
