--- a/index.html
+++ b/index.html
@@ -332,9 +332,9 @@
 
 
   <!-- Contact Section -->
-  <section class="page-section" id="contact" style="background-color:#D8D5DB;"  >
+  <section class="page-section" id="contact" style="background-color:#ADACB5;"  >
     <div class="container" style="background-color:#F5B041;" >
-      <div class="row justify-content-center" style="background-color:#F5B041;">
+      <div class="row justify-content-center" style="background-color:#ADACB5;">
         <div class="col-lg-8 text-center">
           <h2 class="mt-0 text-uppercase text-light">contact</h2>
           <hr class="divider my-2" style="size:50px;">
