--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
   </section>
 
   <!-- Footer -->
-  <footer class="py-5" style="background-color:2D3142;">
+  <footer class="py-5" style="background-color:#2D3142;">
   <div class="container">
       <div class="text-center">
         <a type="button" href="https://github.com/rshafi2" class="btn-floating btn-lg btn-git bg-light" target="_blank"><i class="fa fa-github"></i></a>
