--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
         <a type="button" href="https://www.linkedin.com/in/mohammad-shafi/" class="btn-floating btn-lg btn-linkedin bg-light" target="_blank"><i class="fa fa-linkedin"></i></a>
       </div>
       <br/>
-      <div class="small text-center text-dark "> Handcrafted with <img src="img/love.png" alt="Love Symbol"> &copy; twentynineteen</div>
+      <div class="small text-center" style="color:#d6370c"> Handcrafted with <img src="img/love.png" alt="Love Symbol"> &copy; twentynineteen</div>
     </div>
   </footer>
   <script src="js/creative.min.js"></script>
