--- a/index.html
+++ b/index.html
@@ -70,11 +70,10 @@
         <div class="col-lg-10 align-self-end pt-5">
           <h1 class="display-1 text-white font-weight-normal">Hello, I'm <span class="font-italic font-weight-bold" style="color:#d6370c">Mohammad Shafi.</span> <br/> I am a Software Developer.</h1>
          <div class="text-center">
-            <a type="button" href="https://github.com/rshafi2" class="btn-floating btn-lg btn-git" target="_blank"><i class="fa fa-github"></i></a>
-            <a type="button" href="https://www.linkedin.com/in/mohammad-shafi/" class="btn-floating btn-lg btn-linkedin" target="_blank"><i class="fa fa-linkedin"></i></a>
+            <a type="button" href="https://github.com/rshafi2" class="btn-floating btn-lg btn-git btn-light" target="_blank"><i class="fa fa-github"></i></a>
+            <a type="button" href="https://www.linkedin.com/in/mohammad-shafi/" class="btn-floating btn-lg btn-linkedin btn-light" target="_blank"><i class="fa fa-linkedin"></i></a>
          </div>
-         <a href="#about"class="btn btn-secondary btn-lg bg-secondary js-scroll-trigger my-2">View my work!</a>
-        </div>
+        
     <!--  <div class="align-items-center justify-content-center text-center">
         <a class="btn btn-secondary btn-xl js-scroll-trigger" href="#about">Checkout my work!</a>  
         </div> -->
