--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
           </li>
            <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="Resume (April1).pdf">Resume</a>
+            <a class="nav-link js-scroll-trigger" href="Mohammad Shafi - New Resume (1) (1).pdf">Resume</a>
           </li>
         </ul>
       </div>
