--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
           </li>
-           <li class="nav-item">
+          <!-- <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="Mohammad Shafi - New Resume (1) (1).pdf">Resume</a>
-          </li>
+          </li> -->
         </ul>
       </div>
     </div>
@@ -71,7 +71,6 @@
           <h1 class="display-1 text-white font-weight-normal">Hello, I'm <span class="font-italic font-weight-bold" style="color:#d6370c">Mohammad Shafi.</span> <br/> I am a Software Developer.</h1>
          <div class="text-center">
             <a type="button" href="https://github.com/rshafi2" class="btn-floating btn-lg btn-git btn-light" target="_blank"><i class="fa fa-github"></i></a>
-            <a type="button" href="https://www.linkedin.com/in/mohammad-shafi/" class="btn-floating btn-lg btn-linkedin btn-light" target="_blank"><i class="fa fa-linkedin"></i></a>
          </div>
         
     <!--  <div class="align-items-center justify-content-center text-center">
