--- a/index.html
+++ b/index.html
@@ -368,10 +368,9 @@
   <div class="container">
       <div class="text-center">
         <a type="button" href="https://github.com/rshafi2" class="btn-floating btn-lg btn-git bg-light" target="_blank"><i class="fa fa-github"></i></a>
-        <a type="button" href="https://www.linkedin.com/in/mohammad-shafi/" class="btn-floating btn-lg btn-linkedin bg-light" target="_blank"><i class="fa fa-linkedin"></i></a>
       </div>
       <br/>
-      <div class="small text-center" style="color:#ffffff"> Handcrafted with <img src="img/love.png" alt="Love Symbol"> &copy; twentynineteen</div>
+      <div class="small text-center" style="color:#ffffff"> Handcrafted with <img src="img/love.png" alt="Love Symbol"> &copy; twentytwentyone</div>
     </div>
   </footer>
   <script src="js/creative.min.js"></script>
